[UTF-8][Japanese]

*Ver3.0 RC2: 2015/11/xx

-textarea を 'display: block' に変更しました。
-Twitterへの通知送信を更新通知Pingの設定と連動するようにしました。
-{[asin:XXXX:image]}記法使用時、スライドショー（Lightbox2）の対象にならないようにしました。
-付加情報リビルド時にタグ情報テーブルも再生成するようにしました。
-ツリー編集画面で項目編集中にツリー内の別の場所をクリックしたら編集を終了するようにしました。
-記事一覧を nofollow から外しロボットに検索させるようにしました。((検索エンジンにサイト内のすべての記事を見つけてもらいやすくするための措置です。サイトマップの代わり。))
-デザイン編集で必須要素が消えないように対策しました。((本来は起こりえないのですが、不具合発生時のセーフティとして対策しました。))
-ボタンのデザインがブラウザによりまちまちなので、最低限CSSで指定するようにしました。
-Twitterソーシャルボタンで共有済の検索から「http://」を除くようにしました。
-編集画面の記事番号の表示位置を変更しました。
-編集画面の記法ヘルパーや画像貼付がHTML入力選択時も動作するようにしました。
-記事編集画面の下書き保存ボタンの位置を変更しました。((自分でよく間違えて公開保存してしまっていたので、多分こっちの変更後のほうが使いやすいはず。))
-HTML直接入力のパーサーを改良し、使いやすくしました。
-CGI動作時の記事編集保存の速度を少し速くしましした。
-index.html を更新しました。
-【アルバム】フォルダロード中は「loadingアイコン」に切り替えるようにしました。
-【アルバム】操作ボタンを整理しました。
-【lightbox】スマホからの操作時、ズーム中やズーム動作で画像をめくらないようにしました。
-【lightbox】画像リンクを、SHIFTと共にクリックした場合はブラウザデフォルト動作を、CTRLを押しながらクリックした場合はファイルをダウンロードするようにしました。
-【テーマ】satsuki2のマルチサイドバー表示時のサイドバーの幅を可変にしました。
-【テーマ】sumomoテーマのスマホ/タブレット表示を改善しました。
-【fix】nature-dark テーマを選ぶとエラーが表示される。
-【fix】シンタックハイライトで言語「c」を指定するとセンタリングされてしまう。（[http://test.blog.abk.nu/02829:Thanks to tester]）
-【fix】[http://adiary.org/v3man/install2/:#conf:trust_mode設定時]、スマホメニューの設定で項目が出てこない。（[https://twitter.com/dentacs/status/636828022612463616:Thanks to tono]）
-【fix】「続きを読む」記法使用時、続きを読むよりも手前にある画像等が表示されない。（[http://adiary.blog.abk.nu/0370#c1:Thanks to 平山]）((アップデート後、該当する記事を再保存するか全記事を再構築してください。))
-【fix】画像アルバムでフォルダ新規作成時に、そのフォルダを開かない。（[http://adiary.blog.abk.nu/0370#c1:Thanks to 平山]）
-【fix】コンテンツ一覧画面で右クリックからリンクを開いた時記事が表示されない。
-【fix】PostgreSQL/MySQL運用時、タグ一覧からのタグ編集がうまく行かない。((DB_pg/DB_mysqlにおいて、条件節において空の配列を指定したときの動作が正しくない不具合の修正。))
-【fix】サイドバーモジュールのタイトルがリンクであるとき、一部テーマで文字が読みにくい。
-【fix】タグ名に日本語や「&」を含む時、タグ検索リンクやページ送りのURIがエンコードされていない。（[http://adiary.blog.abk.nu/0370#c3:Thanks to とも]）
-【fix】タグの統合時にタグ数の表示が正しくない。
-【fix】記事数が0のタグで検索するとすべての記事が出てきてしまう。
-【fix】iframe等が記事からはみ出ることがある。
-【fix】記事編集画面で元々あったタグをすべて削除すると、新たに追加したタグを削除できなくなる。