@@ -481,6 +481,28 @@ css_initial_functions.push(function(){
 });
 
 //////////////////////////////////////////////////////////////////////////////
+//●MathJaxの自動ロード
+//////////////////////////////////////////////////////////////////////////////
+var MathJaxURL = 'http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML';
+$(function(){
+	var mj_span = $('span.math');
+	var mj_div  = $('div.math');
+	if (!mj_span.length && !mj_div.length) return;
+
+	window.MathJax = {
+		TeX: { equationNumbers: {autoNumber: "AMS"} },
+		tex2jax: {
+			inlineMath: [],
+			DisplayMath: [],
+			processEnvironments: false,
+			processRefs: false
+		},
+		extensions: ['jsMath2jax.js']
+	};
+	$.getScript( MathJaxURL );
+});
+
+//////////////////////////////////////////////////////////////////////////////
 //●viewport の上書き
 //////////////////////////////////////////////////////////////////////////////
 css_initial_functions.push(function(){
